# arkoi_lang

./: .gitignore  Cargo.toml  arkoi.md
crates/arkoi/: Cargo.toml
crates/arkoi/src/: main.rs  run.rs
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  lib.rs  symbol.rs  traversal.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: file.rs  lib.rs  positional.rs  renderer.rs  report.rs  utils.rs
crates/errors/: Cargo.toml
crates/errors/src/: lexer.rs  lib.rs  parser.rs
crates/frontend/ast/: Cargo.toml
crates/frontend/ast/src/: ast.rs  lib.rs  symbol.rs  traversal.rs
crates/frontend/lexer/: Cargo.toml
crates/frontend/lexer/src/: cursor.rs  error.rs  iterator.rs  lexer.rs  token.rs
crates/frontend/lexer/src/snapshots/: lexer__lexer__tests__insta_test.snap  lexer__tests__insta_test.snap
crates/frontend/lexer/tests/: insta.rs  token.rs
crates/frontend/lexer/tests/snapshots/: insta__insta_test.snap
crates/frontend/name_resolution/: Cargo.toml
crates/frontend/name_resolution/src/: error.rs  lib.rs  name_resolution.rs  symbol.rs  table.rs
crates/frontend/parser/: Cargo.toml
crates/frontend/parser/src/: cursor.rs  error.rs  parser.rs
crates/frontend/semantics/: Cargo.toml
crates/frontend/semantics/src/: error.rs  lib.rs  semantics.rs
crates/frontend/type_checker/: Cargo.toml
crates/frontend/type_checker/src/: error.rs  lib.rs  type_checker.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: error.rs  execute.rs  interpreter.rs  lib.rs  main.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: cursor.rs  error.rs  iter.rs  iterator.rs  lexer.rs  lib.rs  reports.rs  token.rs
crates/lexer/src/snapshots/: lexer__lexer__tests__insta_test.snap  lexer__tests__insta_test.snap
crates/lexer/test_files/: insta_test.ark
crates/middleend/tac/: Cargo.toml
crates/middleend/tac/src/: lib.rs  tac.rs
crates/name_resolution/: Cargo.toml
crates/name_resolution/src/: error.rs  lib.rs  name_resolution.rs  symbol.rs  symbol_table.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  cursor.rs  error.rs  lib.rs  parser.rs  reports.rs  traversel.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: lib.rs
examples/: first.ark  parser.ark  struct.ark
src/: main.rs
