[workspace]
members = [
  "crates/diagnostics",
  "crates/interpreter",
  "crates/lexer",
  "crates/parser",
  "crates/semantic",
  "crates/errors",
  "crates/arkoi",
]

[workspace.package]
authors = ["Timo Behrend"]
categories = ["interpreter", "toy-language", "arkoi"]
edition = "2021"
version = "0.1.0"
