[workspace]
members = [
  "crates/arkoi",
  "crates/diagnostics",
  "crates/frontend/ast",
  "crates/frontend/lexer",
  "crates/frontend/parser",
  "crates/frontend/semantics",
  "crates/frontend/name_resolution",
  "crates/frontend/type_checker",
  "crates/middleend/tac",
]
resolver = "2"

[workspace.package]
authors = ["Timo Behrend"]
categories = ["interpreter", "toy-language", "arkoi"]
edition = "2021"
version = "0.1.0"
