[package]
name = "arkoi"
description = "Arkoi is the offical toolsuit for the interpreter.\nUsing this binary you can do different things like debugging, executing the repl or just using the interpreter."
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
