[package]
name = "arkoi"
description = "Arkoi is the offical toolsuit for the interpreter.\nUsing this binary you can do different things like debugging, executing the repl or just using the interpreter."
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diagnostics = { path = "../diagnostics" }
interpreter = { path = "../interpreter" }
semantics = { path = "../frontend/semantics" }
parser = { path = "../frontend/parser" }
lexer = { path = "../frontend/lexer" }
ast = { path = "../frontend/ast" }

serde = { version = "1.0.188", features = ["derive"], optional = true }
lasso = { version = "0.7.2", features = ["serialize"] }
clap = { version = "4.4.3", features = ["derive"] }
termcolor = "1.2.0"

[features]
default = [ "serialize" ]
serialize = [ "dep:serde" ]
