[package]
name = "diagnostics"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
colored = "2.0.4"
strum = "0.25"
strum_macros = "0.25"
serde = { version = "1.0.188", features = ["derive"], optional = true }
serdebug = { version = "1.0.5", optional = true }
derive_builder = "0.12.0"
termcolor = "1.2.0"

[features]
default = ["serialize"]
serialize = ["dep:serde"]
serdebug = ["dep:serde", "dep:serdebug"]
