[package]
name = "diagnostics"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { version = "1.0.188", features = ["derive"], optional = true }
derive_builder = "0.12.0"
strum_macros = "0.25"
termcolor = "1.2.0"
colored = "2.0.4"
strum = "0.25"

[features]
default = ["serialize"]
serialize = ["dep:serde"]
