[package]
name = "interpreter"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diagnostics = { path = "../diagnostics" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
semantic = { path = "../semantic" }

serde = { version = "1.0.188", features = ["derive"], optional = true }
lasso = { version = "0.7.2", features = ["serialize"] }
termcolor = "1.2.0"

[features]
default = [ "serialize" ]
serialize = [ "dep:serde" ]
