[package]
name = "lexer"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diagnostics = { path = "../diagnostics" }
insta = { version = "1.31.0", features = ["yaml"] }
serde = { version = "1.0.188", features = ["derive"] }
serdebug = "1.0.5"
strum = { version = "0.25.0", features = ["derive"] }
