[package]
name = "lexer"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diagnostics = { path = "../diagnostics" }
errors = { path = "../errors" }

insta = { version = "1.31.0", features = ["yaml"] }
lasso = { version = "0.7.2", features = ["serialize"] }
serde = { version = "1.0.188", features = ["derive"], optional = true }
strum = { version = "0.25.0", features = ["derive"] }

[features]
default = ["serialize"]
serialize = ["dep:serde"]
