[package]
name = "name_resolution"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diagnostics = { path = "../diagnostics/" }
parser = { path = "../parser/" }
lexer = { path = "../lexer/" }
lasso = { version = "0.7.2", features = ["serialize"] }
