[package]
name = "parser"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
version = { workspace = true }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
diagnostics = { path = "../diagnostics" }
errors = { path = "../errors" }

serde = { version = "1.0.188", features = ["derive"], optional = true }

[features]
default = [ "serialize" ]
serialize = [ "dep:serde" ]
