[package]
name = "parser"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diagnostics = { path = "../../diagnostics" }
lexer = { path = "../lexer" }
ast = { path = "../ast" }

serde = { version = "1.0.188", features = ["derive"], optional = true }

[features]
default = [ "serialize" ]
serialize = [ "dep:serde" ]
