[package]
name = "type_checker"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diagnostics = { path = "../../diagnostics/" }
name_resolution = { path = "../name_resolution" }
ast = { path = "../ast" }

lasso = { version = "0.7.2", features = ["serialize"] }
serde = { version = "1.0.188", features = ["derive", "rc"], optional = true }

[features]
default = [ "serialize" ]
serialize = [ "dep:serde" ]
